# edu-asm

./: BYTECODE.md  Cargo.toml  MEMORY.md  SPEC.md
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: immediate.rs  instruction.rs  instruction_ident.rs  lib.rs  mode.rs  register.rs
disassembler/: Cargo.toml
disassembler/src/: decoder.rs  lib.rs
examples/: basic.edu
interpreter/: Cargo.toml
interpreter/src/: behaviour.rs  lib.rs  literal.rs  register.rs
interpreter/src/instruction/: arithmetic_base.rs  arithmetic_mult_div.rs  control_flow.rs  memory.rs  misc.rs  mod.rs
lexer/: Cargo.toml
lexer/src/: comment.rs  label.rs  label_ref.rs  lib.rs  literal.rs  operator.rs  register.rs  token.rs
lexer/tests/: basic.rs
parser/: Cargo.toml
parser/src/: comment.rs  error.rs  instruction.rs  label.rs  label_ref.rs  lib.rs  literal.rs  register.rs
vm/: Cargo.toml
vm-cli/: Cargo.toml
vm-cli/src/: main.rs
vm/src/: immediate.rs  lib.rs  register.rs  register_spec.rs  settings.rs  state.rs
vm/src/cpu/: decode.rs  fetch.rs  instruction.rs  mod.rs
vm/src/memory/: mod.rs  stack.rs
